# haskell-scribbling

./: .dir-locals.el  .gitignore  .gitpod.Dockerfile  .gitpod.yml  README.md  README.org
APlayOnRegularExpressions/: APlayOnRegularExpressions.cabal  LICENSE  README.org  benchmark
APlayOnRegularExpressions/app/: Main.hs
APlayOnRegularExpressions/genrnd/: Main.hs
APlayOnRegularExpressions/src/: Lib.hs  LibAct2.hs  LibAct3.hs  LibOwn.hs  Semiring.hs
APlayOnRegularExpressions/test/: Act1Scene1.hs  Act1Scene2.hs  Act2Scene1.hs  Act2Scene2.hs  Act3Scene1.hs  OwnBase.hs  OwnMatchGroup.hs  Section2.hs  SemiringSpec.hs  Spec.hs  SpecHelper.hs  SpecHelperOwn.hs
ClownsLeftJokersRight/: README.org  src.hs
ErrorReportingParsers/: .gitignore  README.org  package.yaml
ErrorReportingParsers/app/: Main.hs
ErrorReportingParsers/src/: MTParser.hs  MTParser1.hs  MTParser2.hs  MTParser3.hs  SimpleParser.hs  TheirMonadError.hs
ErrorReportingParsers/test/: Spec.hs
FizzBuzzDSL/: fizzbuzz.hs
ParallelParsingProcesses/: .gitignore  Makefile  README.org  package.yaml
ParallelParsingProcesses/app/: Main.hs
ParallelParsingProcesses/src/: P1.hs  P2.hs  P3RemovingBind.hs  P4RemovingPlus.hs  P5AssociativityOfBind.hs  P6LookAhead.hs  P7ErrorReporting.hs  PropLogic.hs  Woof.hs
SimulEpargneLongTerme/: .gitignore  README.org  SimulEpargneLongTerme.cabal  package.yaml
SimulEpargneLongTerme/app/: Main.hs
SimulEpargneLongTerme/src/: Banking.hs
SimulEpargneLongTerme/test/: Spec.hs
arrows/: Arrows.hs  DList.hs  Hdl.hs  README.txt  S5logic.hs  S5sim.hs  arr.hs  main.hs  testhdl.hs  tests5sim.hs
autoledger/: autoledger.cabal  shell.nix
autoledger/app/: Main.hs
autoledger/src/: ArgentaParser.hs  BelfiusParser.hs  ConfigLanguage.hs  Lib.hs  Transaction.hs
autoledger/test/: ArgentaParserTests.hs  BelfiusParserTests.hs  ConfigLanguageTests.hs  Spec.hs  TransactionTest.hs
continuation-passing-defunctionalization/: Main.hs
cryptarith/: cryptarith.hs
first-sdl2/: README.org  cabal.project.freeze  first-sdl2.cabal  shell.nix
first-sdl2/src/: AllSDL.hs  AtLeast2.hs  FirstSdl2.hs  Hero.hs  Keymaps.hs  Physics.hs  Snake.hs
mtl-tut/: README.txt  tut.hs
mu-puzzle/: README.txt
naivebup/: LICENSE  README.org  naivebup.cabal  stack.yaml
onlykey-cli/: LICENSE  example.hs  onlykey-cli.cabal  shell.nix
parsingWithDerivatives/: derivativeRegexp.hs
queryHIBPwned/: README.org  default.nix  nixos-19.09.json  pkgs-from-json.nix  queryHIBPwned.cabal  release.nix  shell.nix  toggle-hoogle.nix
queryHIBPwned/app/: Main.hs
queryHIBPwned/src/: AppMonad.hs  Parser.hs  Password.hs
queryHIBPwned/test/: AppMonadSpec.hs  Spec.hs
record-size/: README.org  record-size.cabal
record-size/src/: Categories.hs  Chunked.hs  Main.hs  Utils.hs
ripandtag/: .gitignore  Makefile  README.md  package.yaml  stack.yaml
ripandtag/app/: Main.hs
ripandtag/src/: ParseRipSpec.hs  Shell.hs
ripandtag/test/: Spec.hs
scotty-starter/: .gitignore  Main.hs  app.cabal  scotty-starter.nix  shell.nix
scotty-starter/Controllers/: Home.hs
scotty-starter/Lib/: SimpleReading.hs
scotty-starter/Views/: Home.hs  Utils.hs
shell-scripts/: VaigoDownloader.hs
sokoban/: ChangeLog.md  levels.txt  minimal.hs  shell.nix  sokoban.cabal
sokoban/lib/: Game.hs  InteractiveSelect.hs  Lib.hs  Zipper.hs
sokoban/src/: Sokoban.hs
sokoban/test/: CheckDistributionOfArb.hs  Spec.hs  TestGame.hs  TestInteractiveSelect.hs
string-calculator-kata/: LICENSE  README.org  default.nix  release.nix  shell.nix  string-calculator-kata.cabal
string-calculator-kata/src/: StringCal.hs
string-calculator-kata/test/: Spec.hs
synctests/: .gitignore  Events.hs  README.org  package.yaml
synctests/scripts/: compareAll.sh  myMerge.sh  unisonsync.sh
synctests/src/: Events.hs
threepasskata/: .gitignore  LICENSE  README.md  package.yaml  stack.yaml
threepasskata/src/: TinyThreePassCompiler.hs
threepasskata/test/: Spec.hs
wolfenhain/: default.nix  wolfenhain.cabal  wolfenhain.nix
wolfenhain/app/: Wolfenhain.hs
wolfenhain/src/: AllSDL.hs  LineOfFlight.hs  Physics.hs  Terrain.hs  Wolfenhain.hs
wolfenhain/test/: Tagged.hs  Test.hs
xform-logs-to-cpp-data-for-sumatrapdf-unit-tests/: README.org  test.hs
