cabal-version:      2.2
name:               autoledger
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Translate Belfius CSV export into initial ledger input

-- A longer description of the package.
description: Generate initial input for ledger, needing human editing.

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Philippe Crama
maintainer:         pcfeb0009@gmx.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files:

library
    exposed-modules: Lib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    default-extensions: OverloadedStrings
    build-depends:    base >=4.11
                    , cassava >= 0.5.2
    hs-source-dirs:   src
    default-language: Haskell2010

executable autoledger
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    default-extensions: OverloadedStrings
    build-depends:
        base >=4.11
      , bytestring
      , cassava >= 0.5.2
      , vector
      , autoledger

    hs-source-dirs:   app
    default-language: Haskell2010
