name:                fist-sdl2
version:             0.0.0.1
author:              Philippe Crama
maintainer:          pcfeb0009@gmx.com
cabal-version:       >=1.10
build-type:          Simple


executable first-sdl2
  hs-source-dirs:      src
  main-is:             FirstSdl2.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , sdl2
                     , sdl2-image
                     , text
  default-language: Haskell2010