name:                first-sdl2
version:             0.0.0.3
author:              Philippe Crama
maintainer:          pcfeb0009@gmx.com
cabal-version:       >=1.10
build-type:          Simple


executable first-sdl2
  hs-source-dirs:      src
  main-is:             FirstSdl2.hs
  other-modules:       AllSDL
                     , AtLeast2
                     , Hero
                     , Keymaps
                     , Physics
                     , Snake
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , random
                     , sdl2
                     , sdl2-image
                     , sdl2-ttf
                     , text
  default-language: Haskell2010
