name:                naivebup
version:             0.1.0.0
synopsis:            Walk file trees, comparing file sizes & modification dates
-- description:
homepage:            https://github.com/pcrama/haskell-scribbling/naivebup#readme
license:             BSD3
license-file:        LICENSE
author:              Philippe Crama
maintainer:          pcfeb0009@gmx.com
copyright:           2017
category:            script
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable naivebup
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
