name:          onlykey-cli
version:       0.1.0.1
cabal-version: >=1.6
build-type:    Simple
license:       BSD3
license-file:  LICENSE
copyright:     2019 Philippe Crama <pcfeb0009@gmx.com>
author:        Philippe Crama <pcfeb0009@gmx.com>
maintainer:    Philippe Crama <pcfeb0009@gmx.com>
homepage:      https://github.com/pcrama/haskell-scribbling/onlykey-cli
bug-reports:   https://github.com/pcrama/haskell-scribbling/issues
category:      System, Hardware
synopsis:      Interface with OnlyKey https://onlykey.io

-- TODO: change this, but how to limit scope to directory of git repository
-- source-repository head
--   Type:     git
--   Location: git://github.com/basvandijk/usb-example.git

executable example
  main-is: example.hs

  GHC-Options: -Wall -threaded

  build-depends: base       >= 4     && < 5.0
               , hidapi     >= 0.1.5
               , bytestring >= 0.10  && < 0.11
               , usb        >= 1.3   && < 1.4
               , vector     >= 0.12  && < 0.13
