name:                record-size
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/pcrama/haskell-scribbling/record-size#readme
license:             GPL-3
license-file:        ../LICENSE
author:              Philippe Crama
maintainer:          pcfeb0009@gmx.com
copyright:           2017 Philippe Crama
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.org

executable record-size
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
