-- Complete project initially cloned from scotty-starter
--
-- + repository https://github.com/scotty-web/scotty-starter
-- + homepage   https://github.com/dmjio/scotty-starter

name:                app
version:             0.1.0.0
synopsis:            Meter Reading Note Taking App
description:         Meter Reading Note Taking App
homepage:            https://github.com/pcrama/haskell-scribbling/scotty-starter/
license:             PublicDomain
author:              Philippe Crama
maintainer:          pcfeb0009@gmx.com
copyright:           Philippe Crama (c) 2023
category:            Web
build-type:          Simple
cabal-version:       >= 1.10

executable app
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  other-modules:       Client.CSS
                       Controllers.Home
                       Views.Home
                       Views.Utils
  build-depends:       base >=4.3.1,
                       wai-extra >=3.0.0,
                       wai-middleware-static,
                       scotty,
                       clay,
                       text,
                       blaze-html,
                       blaze-markup,
                       aeson
  default-language:    Haskell2010
