name:                wolfenhain
version:             0.0.0.1
author:              Philippe Crama
maintainer:          pcfeb0009@gmx.com
cabal-version:       >=1.10
build-type:          Simple


executable wolfenhain
  hs-source-dirs:      src
  main-is:             Wolfenhain.hs
  other-modules:       AllSDL
                     , AtLeast2
                     , LineOfFlight
                     , Physics
                     , Terrain
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , array
                     , sdl2
                     , sdl2-image
                     , sdl2-ttf
                     , text
  default-language: Haskell2010
