cabal-version:       2.2

name:                wolfenhain
version:             0.0.0.1
author:              Philippe Crama
maintainer:          pcfeb0009@gmx.com
build-type:          Simple


common shared-properties
  default-language:    Haskell2010
  build-depends:       base >=4.11
                     , array
                     , text
                     , sdl2
                     , sdl2-image
                     , sdl2-ttf
  ghc-options:         -Wall -O2


library
  import:              shared-properties
  hs-source-dirs:      src
  exposed-modules:     AllSDL
                     , AtLeast2
                     , LineOfFlight
                     , Physics
                     , Terrain


executable wolfenhain
  import:              shared-properties
  main-is:             Wolfenhain.hs
  hs-source-dirs:      app
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       wolfenhain
