cabal-version:       2.2

name:                wolfenhain
version:             0.0.0.1
author:              Philippe Crama
maintainer:          pcfeb0009@gmx.com
build-type:          Simple


common shared-properties-light
  default-language:    Haskell2010
  build-depends:       base >=4.11
  ghc-options:         -Wall -O2


common shared-properties
  import:              shared-properties-light
  build-depends:       text
                     , sdl2
                     , sdl2-image
                     , sdl2-ttf
                     , lineofflight
  ghc-options:         -Wall -O2


library lineofflight
  import:              shared-properties-light
  hs-source-dirs:      src
  build-depends:       array
  exposed-modules:     LineOfFlight
                     , Terrain


library wolfenhainlib
  import:              shared-properties
  hs-source-dirs:      src
  build-depends:       lineofflight
  exposed-modules:     AllSDL
                     , AtLeast2
                     , Physics


executable wolfenhain
  import:              shared-properties
  main-is:             Wolfenhain.hs
  hs-source-dirs:      app
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       wolfenhainlib


executable test
  import:              shared-properties
  main-is:             Test.hs
  hs-source-dirs:      test
  other-modules:       Tagged
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       hspec >= 2.7
                     , QuickCheck >= 2.9.2 && < 3
                     , wolfenhainlib

-- Local Variables:
-- compile-command: "cabal new-run exe:test"
-- End:
